fix overflow on bridge show page

--- a/app/assets/stylesheets/bridge-show.css
+++ b/app/assets/stylesheets/bridge-show.css
@@ -8,7 +8,7 @@
 .show-page-info {
   width: 100%;
   padding: 0px 60px 0px 60px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .show-page-map-container {
